--- a/index.html
+++ b/index.html
@@ -5,43 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/lightbox.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        </script>
     <title>Deleena | Home</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./index.html">Home</a>
-                </li>
-                <li>
-                    <a href="./Argan Oil.html">Argan oil</a>
-                </li>
-                <li>
-                    <a href="./Olive Oil.html">Olive oil</a>
-                </li>
-                <li>
-                    <a href="./Our Farm.html">Our farm</a>
-                </li>
-                <li>
-                    <a href="./Shop.html">Shop</a>
-                </li>
-                <li>
-                    <a href="./Contact Us.html">Contact us</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>DeLeena home page</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde enim reprehenderit explicabo culpa minus fuga
-            doloribus aut omnis, inventore, dolorem id magnam aliquam ipsum soluta, animi minima? Provident, accusantium
-            quae!</p>
-    </main>
-    <aside>Extra stuff on home page</aside>
-    <footer>&copy; 2020 Deleena.inc</footer>
+    <div class="wrapper">
+        <header>
 
+            <a id="sign-in" href="#">SIGN IN</a>
+            <a id="sign-up" href="#">SIGN UP</a>
+
+            <button class="nav-trigger">
+                <img src="./images/menuPurple.svg" alt="menu button">
+            </button>
+
+            <nav>
+                <ul>
+                    <li>
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="./Argan Oil.html">Argan oil</a>
+                    </li>
+                    <li>
+                        <a href="./Olive Oil.html">Olive oil</a>
+                    </li>
+                    <li>
+                        <a href="./Our Farm.html">Our farm</a>
+                    </li>
+                    <li>
+                        <a href="./Shop.html">Shop</a>
+                    </li>
+                    <li>
+                        <a href="./Contact Us.html">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <img src="./images/logo-01.svg" alt="DeLeena logo">
+            <h1>Argan and Olive Oil</h1>
+            <p>Our Argan and Olive oils are straight from our family farm in Taroudant, Morocco. Our oils are extra
+                virgin, cold-pressed, unfiltered, undiluted and are 100% pure and natural.</p>
+        </main>
+        <aside>Extra stuff on home page</aside>
+        <footer>&copy; 2020 Deleena.inc</footer>
+    </div>
+    <script src="./js/lightbox.min.js"></script>
 </body>
 
 </html>
