--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
         </script>
+    <script>
+        $(".nav-trigger").on("click", function () {
+            $("nav").slideToggle();
+        });
+    </script>
+
+
     <title>Deleena | Home</title>
 </head>
 
@@ -19,9 +26,10 @@
             <a id="sign-in" href="#">SIGN IN</a>
             <a id="sign-up" href="#">SIGN UP</a>
 
-            <button class="nav-trigger">
-                <img src="./images/menuPurple.svg" alt="menu button">
-            </button>
+            <div class="nav-trigger"><button>
+                    <img src="./images/menuPurple.svg" alt="menu button">
+                </button>
+            </div>
 
             <nav>
                 <ul>
@@ -51,6 +59,14 @@
             <h1>Argan and Olive Oil</h1>
             <p>Our Argan and Olive oils are straight from our family farm in Taroudant, Morocco. Our oils are extra
                 virgin, cold-pressed, unfiltered, undiluted and are 100% pure and natural.</p>
+            <img src="./images/argan-branch2.jpg" alt="argan branch" width="100%">
+            <div class="button-container"><button> <a href="./Shop.html">buy online</a>></button></div>
+            <h2>the best argan oil you can find online </h2>
+            <p>Argan oil also known as - Liquid Gold - is native to a region in Southern Morocco and can't be found
+                anywhere else, which makes it one of the rarest and most expensive oils in the world.Most people know or
+                are already using Argan Oil for cosmetic purposes however, culinary Argan oil has many health benefits.
+            </p>
+            <img src="./images/argan1.jpg" alt="argan seeds" width="100%">
         </main>
         <aside>Extra stuff on home page</aside>
         <footer>&copy; 2020 Deleena.inc</footer>
