sign in page is added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="sign-links">
                 <a id="sign-in" href="./sign in.html">SIGN IN</a>
-                <a id="sign-up" href="#">SIGN UP</a>
+                <a id="sign-up" href="./sign up.html">SIGN UP</a>
             </div>
 
             <button class="nav-trigger">
