--- a/Shop.html
+++ b/Shop.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
         </script>
+        <script src="https://kit.fontawesome.com/a398f9a5b5.js" crossorigin="anonymous"></script>
     <title>Deleena | Shop</title>
 </head>
 
@@ -48,15 +49,58 @@
                     </li>
                 </ul>
             </nav>
-
+            
         </header>
     <main>
-        <h1>Shop</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde enim reprehenderit explicabo culpa minus fuga
-            doloribus aut omnis, inventore, dolorem id magnam aliquam ipsum soluta, animi minima? Provident, accusantium
-            quae!</p>
+        <div class="search-box">
+            <form>
+                <input type="text" placeholder="Search..." name="search" class="search-input"/>
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
+        <!--<h1>Shop</h1>-->
+        <div class="shop-products">
+            <div class="product-card">
+                <div class="product-image"><img src="./images/shop products/argan1.jpg" width="70%"></div>
+                <div class="product-info">
+                    <a href="#">Organic Argan Oil</a>
+                    <h6>$15.99</h6>
+                </div>
+            </div>
+            <div class="product-card">
+                    <div class="product-image"><img src="./images/shop products/olive oil1.jpg" width="70%"></div>
+                    <div class="product-info">
+                        <a href="#">Organic Olive Oil</a>
+                        <h6>$12.99</h6>
+                </div>
+            </div>
+
+                <div class="product-card">
+                    <div class="product-image"><img src="./images/shop products/argan2.jpg" width="70%"></div>
+                    <div class="product-info">
+                        <a href="#">Organic Cosmetic Argan Oil</a>
+                        <h6>$12.99</h6>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image"><img src="./images/shop products/olive oil1.jpg" width="70%"></div>
+                    <div class="product-info">
+                        <a href="#">Organic Argan Oil Soap</a>
+                        <h6>$12.99</h6>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image"><img src="./images/shop products/olive oil1.jpg" width="70%"></div>
+                    <div class="product-info">
+                        <a href="#">Organic Almond spread with Argan Oil and Honey</a>
+                        <h6>$12.99</h6>
+                </div>
+            </div>
+
+        </div>
+        <hr>
     </main>
-    <aside>Extra stuff on shop</aside>
+    <aside></aside>
     <footer>
         <div class="social-media">
             <a href="https://www.facebook.com/DeLeenanatural/?ref=page_internal"><img src="./images/facebookButton.svg"
