--- a/sign up.html
+++ b/sign up.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper-sign-form">
         <header>
 
             <div class="sign-links">
