product argan oil and spread added

--- a/Shop.html
+++ b/Shop.html
@@ -63,14 +63,16 @@
             <div class="product-card">
                 <div class="product-image"><img src="./images/shop products/argan1.jpg" width="70%"></div>
                 <div class="product-info">
-                    <a href="#">Organic Argan Oil</a>
-                    <h6>$15.99</h6>
+                    <a href="./Product Argan Oil.html">Organic Argan Oil</a>
+                    <h6>5OZ (150ml)</h6>
+                    <h6>$15.99</h6> 
                 </div>
             </div>
             <div class="product-card">
                     <div class="product-image"><img src="./images/shop products/olive oil1.jpg" width="70%"></div>
                     <div class="product-info">
                         <a href="#">Organic Olive Oil</a>
+                        <h6>5OZ (150ml)</h6>
                         <h6>$12.99</h6>
                 </div>
             </div>
@@ -79,20 +81,22 @@
                     <div class="product-image"><img src="./images/shop products/argan2.jpg" width="70%"></div>
                     <div class="product-info">
                         <a href="#">Organic Cosmetic Argan Oil</a>
+                        <h6>50ml</h6>
                         <h6>$12.99</h6>
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image"><img src="./images/shop products/olive oil1.jpg" width="70%"></div>
+                    <div class="product-image"><img src="./images/shop products/soap.jpg" width="70%"></div>
                     <div class="product-info">
                         <a href="#">Organic Argan Oil Soap</a>
                         <h6>$12.99</h6>
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image"><img src="./images/shop products/olive oil1.jpg" width="70%"></div>
+                    <div class="product-image"><img src="./images/shop products/spread.jpg" width="70%"></div>
                     <div class="product-info">
-                        <a href="#">Organic Almond spread with Argan Oil and Honey</a>
+                        <a href="./Product Spread.html">Organic Almond spread with Argan Oil and Honey</a>
+                        <h6>4OZ</h6>
                         <h6>$12.99</h6>
                 </div>
             </div>
