--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </header>
         <main>
             <img class="logo" src="./images/logo-01.svg" alt="DeLeena logo">
-            <h1>Argan and Olive Oil</h1>
+            <h1>Argan and Olive Oil from Morocco</h1>
             <h3>You <span class="argan">ARGAN</span>a love it!</h3>
             <p class="first-paragraph">Our Argan and Olive oils are straight from our family farm in Taroudant, Morocco.
                 Our oils are extra virgin, cold-pressed, unfiltered, undiluted and are 100% pure and natural.</p>
