Our farm and all the products added

--- a/Our Farm.html
+++ b/Our Farm.html
@@ -52,11 +52,17 @@
         </header>
     <main>
         <h1>Our Farm</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde enim reprehenderit explicabo culpa minus fuga
-            doloribus aut omnis, inventore, dolorem id magnam aliquam ipsum soluta, animi minima? Provident, accusantium
-            quae!</p>
+        <a href="./images/farm01.jpg" data-lightbox="roadtrip"><img class="farm-img" src="./images/farm01.jpg" alt="farm" width="30%"></a>
+        <p class="farm-p">The farm has been owned by the Bouzid family since early 1920’s in a region called Wlad Abdulla in Taroudant, Southern Morocco. The farm sits on 9 acres and is run by many sons, daughters and grandchildren. The region’s only income comes from these organic oils and products and live stock.</p>
+       <h2>The men and women harvest and make everything by hand.</h2>
+       <div>
+        <video class="video-farm" width="240px" height="424px" controls poster="images/argan making_n.jpg">
+            <source src="./video/video-2_1.mp4" type="video/mp4">
+        </video>
+    </div>
+    <hr>
     </main>
-    <aside>Extra stuff on our farm</aside>
+    <aside></aside>
     <footer>
         <div class="social-media">
             <a href="https://www.facebook.com/DeLeenanatural/?ref=page_internal"><img src="./images/facebookButton.svg"
