--- a/Shop.html
+++ b/Shop.html
@@ -61,7 +61,8 @@
         <!--<h1>Shop</h1>-->
         <div class="shop-products">
             <div class="product-card">
-                <div class="product-image"><img src="./images/shop products/argan1.jpg" width="70%"></div>
+                <div class="product-image">
+                    <a href="./Product Argan Oil.html"><img src="./images/shop products/argan1.jpg" width="70%"></a></div>
                 <div class="product-info">
                     <a href="./Product Argan Oil.html">Organic Argan Oil</a>
                     <h6>5OZ (150ml)</h6>
@@ -69,31 +70,35 @@
                 </div>
             </div>
             <div class="product-card">
-                    <div class="product-image"><img src="./images/shop products/olive oil1.jpg" width="70%"></div>
+                    <div class="product-image">
+                        <a href="./Product Olive Oil.html"><img src="./images/shop products/olive oil1.jpg" width="70%"></a></div>
                     <div class="product-info">
-                        <a href="#">Organic Olive Oil</a>
+                        <a href="./Product Olive Oil.html">Organic Olive Oil</a>
                         <h6>5OZ (150ml)</h6>
                         <h6>$12.99</h6>
                 </div>
             </div>
 
                 <div class="product-card">
-                    <div class="product-image"><img src="./images/shop products/argan2.jpg" width="70%"></div>
+                    <div class="product-image">
+                        <a href="./Product Cosmetic Argan Oil.html"><img src="./images/shop products/argan2.jpg" width="70%"></a></div>
                     <div class="product-info">
-                        <a href="#">Organic Cosmetic Argan Oil</a>
+                        <a href="./Product Cosmetic Argan Oil.html">Organic Cosmetic Argan Oil</a>
                         <h6>50ml</h6>
                         <h6>$12.99</h6>
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image"><img src="./images/shop products/soap.jpg" width="70%"></div>
+                    <div class="product-image">
+                        <a href="./Product Soap.html"><img src="./images/shop products/soap.jpg" width="70%"></a></div>
                     <div class="product-info">
-                        <a href="#">Organic Argan Oil Soap</a>
+                        <a href="./Product Soap.html">Organic Argan Oil Soap</a>
                         <h6>$12.99</h6>
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image"><img src="./images/shop products/spread.jpg" width="70%"></div>
+                    <div class="product-image">
+                        <a href="./Product Spread.html"><img src="./images/shop products/spread.jpg" width="70%"></a></div>
                     <div class="product-info">
                         <a href="./Product Spread.html">Organic Almond spread with Argan Oil and Honey</a>
                         <h6>4OZ</h6>
