--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
             </div>
             <h2>our products</h2>
             <div class="our-products">
-                <a href="./images/product3.jpg" data-lightbox="roadtrip"><img src="./images/product3.jpg"
+                <a href="./images/product3.jpg" data-lightbox="roadtrip" data-title="Organic Olive Oil"><img src="./images/product3.jpg"
                         alt="olive oil" width="120px"></a>
-                <a href="./images/product7.jpg" data-lightbox="roadtrip"><img src="./images/product7.jpg"
+                <a href="./images/product7.jpg" data-lightbox="roadtrip" data-title="Organic Argan Oil"><img src="./images/product7.jpg"
                         alt="argan oil" width="120px"></a>
-                <a href="./images/product5.jpg" data-lightbox="roadtrip"><img src="./images/product5.jpg"
+                <a href="./images/product5.jpg" data-lightbox="roadtrip" data-title="Organic Cosmetic Argan Oil"><img src="./images/product5.jpg"
                         alt="cosmetic argan oil" width="120px"></a>
-                <a href="./images/product4.jpg" data-lightbox="roadtrip"><img src="./images/product4.jpg"
+                <a href="./images/product4.jpg" data-lightbox="roadtrip" data-title="DeLeena Organic Products"><img src="./images/product4.jpg"
                         alt="all products" width="120px"></a>
-                <a href="./images/product2.jpg" data-lightbox="roadtrip"><img src="./images/product2.jpg"
+                <a href="./images/product2.jpg" data-lightbox="roadtrip" data-title="Organic Almond Spread with Argan Oil and Honey"><img src="./images/product2.jpg"
                         alt="almond paste" width="120px"></a>
-                <a href="./images/product8.jpg" data-lightbox="roadtrip"><img src="./images/product8.jpg"
+                <a href="./images/product8.jpg" data-lightbox="roadtrip" data-title="Organic Olive and Argan Oil"><img src="./images/product8.jpg"
                         alt="two olive oil bottles" width="120px"></a>
 
             </div>
